publishing right-side layout

--- a/src/app/(afterLogin)/layout.module.css
+++ b/src/app/(afterLogin)/layout.module.css
@@ -94,6 +94,11 @@
   height: 100%;
 }
 
+.formContainer {
+  margin-bottom: 60px;
+  width: "inherit";
+}
+
 .search {
   position: fixed;
   height: 42px;
